--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
    AIRTABLE CONFIG
 ========================================================= */
 const AIRTABLE_BASE_ID = "apphm4hXfNvhtwTgD";
-const AIRTABLE_TOKEN = "REPLACE_AT_RUNTIME";
+const AIRTABLE_TOKEN = window.AIRTABLE_TOKEN;
 
 const TABLE_SITES = "Sites";
 const TABLE_CLIENTS = "Clients";
@@ -380,3 +380,4 @@ async function submitReturn() {
 
 </body>
 </html>
+
