--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 /* =========================================================
    AIRTABLE CONFIG (NO SECRET IN FILE)
 ========================================================= */
-const AIRTABLE_BASE_ID = "REPLACE_BASE_ID";
+const AIRTABLE_BASE_ID = "apphm4hXfNvhtwTgD";
 const TABLE_SITES = "Sites";
 const TABLE_CLIENTS = "Clients";
 const TABLE_PEOPLE = "Employees";
@@ -392,3 +392,4 @@ async function submitReturn() {
 
 </body>
 </html>
+
